# faasframe-py

./: .testr.conf  README.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cloudframe/: version.py
cloudframe/common/: job.py
cloudframe/resource/v1/: res01.py
cloudframe/tests/: base.py  test_server.py
cloudframe/tests/resource/v1/: test_res01.py
